--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^4.0.0",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "helmet": "^6.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
